# channels

./: CMakeLists.txt
include/: channel.hpp  fastchannel.hpp
include/channels/: channel.hpp
src/: mpsc.cpp  spmc.cpp  spsc.cpp  testblock.cpp  testchannels.cpp
